Ensure whole logo is wrapped
Slightly increase the max-width to ensure that the whole logo area is covered by the max-width rule.

Does not technically affect the way the logo functions, nor does this change the clickable area, as the <img> element will be wrapped inside the <a> regardless, but ensures that the CSS rules match the visuals.

--- a/assets/css/template/_navbar.scss
+++ b/assets/css/template/_navbar.scss
@@ -125,6 +125,6 @@
 }
 
 .navbar-brand {
-  max-width: 100px;
+  max-width: 120px;
   height: auto;
 }
